# Content_Creator_Crew

./: .gitignore  README.md  pyproject.toml
src/content_crew/: crew.py  main.py
src/content_crew/config/: agents.yaml  tasks.yaml
src/content_crew/tools/: custom_tool.py
